--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "inventor",
+  "name": "awg-inventor",
   "description": "Inventor tools.",
-  "version": "1.0.0",
-  "devDependencies": {
+  "version": "0.0.1",
+  "devDependencies": {},
+  "scripts": {},
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alphawebgroup/inventor.git"
   },
-  "scripts": {
-  }
+  "author": "Alpha Web Group <alpha@alphawebgroup.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/alphawebgroup/inventor/issues"
+  },
+  "homepage": "https://github.com/alphawebgroup/inventor#readme"
 }
